# plutus-pioneer-program

./: .gitignore  .signed  metadata.json  tx.signed  tx.unsigned
api-keys/: blockfrost_api_key
code/FromScratch/: CHANGELOG.md  FromScratch.cabal
code/FromScratch/dist-newstyle/cache/: compiler  config
code/Week02/homework/: Homework1.hs  Homework2.hs
code/Week02/scripts/: collect-gift.sh  custom-type-make-gift.sh  customtypes-collect.sh  make-gift.sh
code/Week03/homework/: Homework1.hs  Homework2.hs
keys/: alice.addr  alice.pkh  alice.skey  alice.vkey  bob.addr  bob.pkh  bob.skey  bob.vkey
links/: mora_path
scripts/: give.sh  give_metadata.sh  give_token.sh  policy.script
